<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context="com.shivani.letsgo.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="#33000000"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Username"
            android:layout_margin="15dp"
            android:background="@drawable/editext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/useredit_name"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            android:background="@drawable/editext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passedit_name"/>

        <Button
            android:background="@drawable/buttoncolor"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginbt"
            android:text="@string/button_text"/>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/newuser"
                android:textStyle="bold"
                android:text="@string/newuser_text"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/clickhere"
                android:text="@string/clickhere_text"
                android:textColor="#3abdf5"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/clickhere1"
                android:text="@string/clickhere_text1"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </LinearLayout>


</FrameLayout>
